fix: fix header padding alignment with page

--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -7,7 +7,7 @@
   z-index: var(--z-index-lvl-3);
   height: 6.4rem;
   width: 100%;
-  padding: var(--space-2) var(--space-5);
+  padding: var(--space-2) var(--space-12);
   box-shadow: 0.1rem 0.2rem 1.6rem rgba(var(--color-shadow-rgb), 0);
   justify-content: space-between;
   align-items: center;
@@ -17,18 +17,22 @@
   top: 0;
   left: 0;
 
-  &--scrolled {
-    box-shadow: 0.1rem 0.2rem 1.6rem rgba(var(--color-shadow-rgb), 0.1);
-    border-radius: 0 0 1rem 1rem;
-    background-color: var(--color-white);
+  @include respond(tab-land) {
+    padding: var(--space-2) var(--space-10);
   }
 
   @include respond(tab-port) {
-    padding: var(--space-3) var(--space-4);
+    padding: var(--space-3) var(--space-5);
   }
 
   @include respond(phone) {
     padding: var(--space-3);
+  }
+
+  &--scrolled {
+    box-shadow: 0.1rem 0.2rem 1.6rem rgba(var(--color-shadow-rgb), 0.1);
+    border-radius: 0 0 1rem 1rem;
+    background-color: var(--color-white);
   }
 
   &__logo-container {
