--- a/src/sass/pages/_search.scss
+++ b/src/sass/pages/_search.scss
@@ -185,7 +185,7 @@
 
     &__results-container {
       position: relative;
-      width: 95%;
+      width: 90%;
       display: flex;
       align-items: center;
       justify-content: center;
